# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.328 2008/08/29 01:07:12 mpagano Exp $

*git-sources-2.6.27_rc5 (29 Aug 2008)

  29 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.27_rc3.ebuild, -git-sources-2.6.27_rc3-r1.ebuild,
  -git-sources-2.6.27_rc3-r2.ebuild, -git-sources-2.6.27_rc3-r3.ebuild,
  -git-sources-2.6.27_rc3-r4.ebuild, -git-sources-2.6.27_rc3-r5.ebuild,
  -git-sources-2.6.27_rc3-r6.ebuild, -git-sources-2.6.27_rc3-r7.ebuild,
  +git-sources-2.6.27_rc5.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.27_rc4-r7 (28 Aug 2008)

  28 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r7.ebuild:
  Version bump

*git-sources-2.6.27_rc4-r5 (27 Aug 2008)

  27 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r5.ebuild:
  Version bump

*git-sources-2.6.27_rc4-r6 (27 Aug 2008)

  27 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r6.ebuild:
  Version bump

*git-sources-2.6.27_rc4-r4 (26 Aug 2008)

  26 Aug 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r4.ebuild:
  Version bump

*git-sources-2.6.27_rc4-r3 (24 Aug 2008)

  24 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r2.ebuild, +git-sources-2.6.27_rc4-r3.ebuild:
  Version bump

*git-sources-2.6.27_rc4-r2 (24 Aug 2008)

  24 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r2.ebuild:
  Version bump

*git-sources-2.6.27_rc4-r1 (23 Aug 2008)

  23 Aug 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.27_rc4-r1.ebuild:
  Version bump

*git-sources-2.6.27_rc4 (21 Aug 2008)

  21 Aug 2008; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.27_rc2.ebuild, -git-sources-2.6.27_rc2-r1.ebuild,
  -git-sources-2.6.27_rc2-r2.ebuild, -git-sources-2.6.27_rc2-r3.ebuild,