@@ -7,6 +7,7 @@ DIST patch-2.6.27-rc4-git5.bz2 77845 RMD160 f656e931f484220417f115bf0f84d9acffc5
 DIST patch-2.6.27-rc4-git6.bz2 147727 RMD160 20e02c0c2a6f5e4ffc7e30d0041055cd7cbbe43d SHA1 764c59ae974476aa017e359021741c9252433327 SHA256 1452608a9da0d4e81087c5e1a67e4f1381d1f2e04b9b051f3f234fbdbe1f5a7c
 DIST patch-2.6.27-rc4-git7.bz2 174749 RMD160 9d7cd72d1fb8e105745939fb6b74c52577407b45 SHA1 5bbab00f47d91385cded46738b1533925986bba7 SHA256 d6cf1b7f1ca8e3896d4b267f98f610e3a36563cd8acb9d698320fa4e6d5a9f34
 DIST patch-2.6.27-rc4.bz2 13675165 RMD160 ffbaed3740aacee0fb8c0e1370021134d818a8f4 SHA1 c0a4a06ff4b61129d69b519e2cd2257c210c2cd7 SHA256 6022677d743b1f12a8087fae5129f97de6c5531f2a9efb5eba5775dce40ef72e
+DIST patch-2.6.27-rc5-git1.bz2 2369 RMD160 39d00683afbd63f7c69b589b6f76c0f77d1d9f4f SHA1 db44dcd023ffa292714b5e364443f6585e260d5e SHA256 2f5c9d97ca228bbbeee10a86573c488da5454fb5724ba8c1b73633b797ae4479
 DIST patch-2.6.27-rc5.bz2 14401921 RMD160 2caa28f7263a72fcef27bae95882216138d0814c SHA1 e9eb778ac6a88d62d9d569053665c582ed5d8cc4 SHA256 83dc890daebcd1814582f8db724a2072c58da839200d58439697d649a991a0c5
 EBUILD git-sources-2.6.27_rc4-r1.ebuild 1242 RMD160 37b25d645e5cc7340091c0ba983d5296fa249933 SHA1 7a4b4f9f8e90624a356cd2fa725ec4a03d51e1e5 SHA256 f2fd956975b29d87b97fac7875fee934dc5c11c51b77b444a9ade5688c71d06f
 EBUILD git-sources-2.6.27_rc4-r2.ebuild 1242 RMD160 0b0f97a38e86acf23ab1f36a75fe7eacce4c5251 SHA1 42dbe5c9a05fd376a750c5ff833dea6d0e87655c SHA256 1e94b986c1222ce9324dbabe8492f92f527eab0ce3ca3fc149ac94bd7ed1e44c
@@ -16,6 +17,7 @@ EBUILD git-sources-2.6.27_rc4-r5.ebuild 1242 RMD160 36c94afdcd612cffcc1edea9026b
 EBUILD git-sources-2.6.27_rc4-r6.ebuild 1242 RMD160 ebd9ae9e8fd812ba215b818c08a921e6aca81075 SHA1 21dd429a21678ef31e3edab5a3e99457ba70593b SHA256 bdaab976674233cb84a72e72c1c19f84f6aeb74e915a88ae536a46f5e0a874c7
 EBUILD git-sources-2.6.27_rc4-r7.ebuild 1242 RMD160 10852d4cd034b34bd8c1650dbfba8820232e4713 SHA1 18f3913e410ea9565037eacf51a388d6b8cb73d3 SHA256 0acbfa44587b8cf5704540a73fbe6c80e8ecf95729c447311102096f04f2865c
 EBUILD git-sources-2.6.27_rc4.ebuild 1239 RMD160 757a467cec48b9aa908426a2ee5efab13ae1b8b5 SHA1 c39055f12bdb4856210bdede5f24301038ba0772 SHA256 89f084bcbbac0194067dab604ae076840da5240dde41356c743e8687b4b32629
+EBUILD git-sources-2.6.27_rc5-r1.ebuild 1242 RMD160 782af0456499ee479e18739abe82464a47db7b28 SHA1 a8091751e81ba9e0bf76106e793e4dfc3b1e5b41 SHA256 ecb8a5b252a64ebba2f928f27d9dab65bf45b7694332cba65f1e08ec2a74cc81
 EBUILD git-sources-2.6.27_rc5.ebuild 1239 RMD160 bd92aa08bac6a28c0265d983e686e9a1049a9cdd SHA1 835ec37d91d3d917c117add5cc4841eeb79cbc0a SHA256 8cfe70f71769966b8b0b13f891e8bf8dc980b1c7f361bfed37338a16ef99058d
-MISC ChangeLog 62484 RMD160 06c2506f98e90ac52083a7c21fd026187dd96acb SHA1 ac8574785a6f7c7aa50fdfe9f1169708736e7f4d SHA256 201ed13b48e16aa7986e7f4f1b0867a724db77d260efc86667bf8b225226a824
+MISC ChangeLog 62630 RMD160 2eda6b685a295d3390308e4ba860084adcb8028a SHA1 26cb5fa4744724e644d5a2833259c3624e198040 SHA256 398bbb976659bf994d889941d793161009e4bf3d2646b280ade7127197d0b40e
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
