@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.328 2008/08/29 01:07:12 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.329 2008/08/30 01:04:36 mpagano Exp $
+
+*git-sources-2.6.27_rc5-r1 (30 Aug 2008)
+
+  30 Aug 2008; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.27_rc5-r1.ebuild:
+  Version bump
 
 *git-sources-2.6.27_rc5 (29 Aug 2008)
 
